# DatabaseCommands

./: LICENSE  README.md  setup.cfg
src/: CreateTable.py  DBConn.py  DeleteData.py  DropTable.py  InsertData.py  QueryData.py  UpdateData.py  __init__.py
src/DatabaseCommands_pkg_sqlite3_Christoph_Johannes_Tempelhoff.egg-info/: PKG-INFO  SOURCES.txt
