[metadata]
name = DatabaseCommands-pkg-sqlite3-Christoph-Johannes-Tempelhoff
version = 0.0.1
author = Christoph Johannes Tempelhoff
author_email = christoph.tempelhoff@gmail.com
description = Package consisting of small moduls for sqlite3
long_description = file: README.md
long_description_content_type: text/markdown
url=