[metadata]
name = DatabaseCommands-pkg-sqlite3-Christoph-Johannes-Tempelhoff
version = 0.0.1
author = Christoph Johannes Tempelhoff
author_email = christoph.tempelhoff@gmail.com
description = Package consisting of small moduls for sqlite3
long_description = file: README.md
long_description_content_type: text/markdown
url= https://github.com/Hunterplayer100/DatabaseCommands
project_urls = 
	Bug Tracker = https://github.com/Hunterplayer100/DatabaseCommands/issues
classifiers =
	Programmingg Language :: P<thon :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src